sasql/tests/compile_fail/drop_rejected.rs
fn main() {
    let _ = sasql::query!("DROP TABLE users");
}
