sasql/tests/compile_fail/drop_rejected.stderr
error: unsupported statement type: `drop`. sasql supports SELECT, INSERT, UPDATE, DELETE
 --> tests/compile_fail/drop_rejected.rs:2:13
  |
2 |     let _ = sasql::query!("DROP TABLE users");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sasql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
